# sui-arbitrage-bot

./: .env.example  .gitignore  HANDOFF.md  Move.toml  Published.toml  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  GAS_OPTIMIZATION.md  SECURITY.md  TESTING.md  authoritative-pnl-report.md  bluefin-study.md  cetus-parity-validation.md  consolidation-plan.md  deepbook-aftermath-study.md  deployment-testnet.md  external-venue-readiness-audit.md  flash-loan-design.md  frictions-adjusted-pnl.md  grafana-dashboard.json  liquidation-pnl.md  mainnet-go-live.md  momentum-study.md  scallop-liquidation-verified.md  strategies-plan.md  testnet-runbook.md  testnet-validation-report.md  turbos-parity-report.md  turbos-parity-research.md
offchain/: Cargo.toml
offchain/examples/: bench.rs  clmm_quote.rs  validate.rs
offchain/src/: amm.rs  cache.rs  cetus_ticks.rs  clmm.rs  config.rs  executor.rs  flashloan.rs  frictions.rs  indexer.rs  ingest.rs  lib.rs  main.rs  metrics.rs  objcache.rs  ptb.rs  quoter.rs  risk.rs  scanner.rs  sizing.rs  strategy.rs  turbos_ticks.rs  types.rs  ws.rs
offchain/src/liquidation/: detect.rs  health.rs  index.rs  mod.rs  oracle.rs  source.rs  types.rs  validator.rs
scripts/: publish.sh
sources/: admin.move  amm_v2.move  executor.move  flash.move  math.move  scaffold.move
sources/adapters/: amm_v2_adapter.move  cetus_adapter.move  turbos_adapter.move
tests/: amm_v2_tests.move  arb_route_tests.move  executor_tests.move  flash_arb_tests.move  scaffold_tests.move  test_coins.move
validation/cetus/: aftermath_rpc.py  analyze_pnl.py  bluefin_parity.py  bluefin_pools.json  bluefin_rpc.py  cetus_rpc.py  deepbook_parity.py  deepbook_rpc.py  deepbook_xvenue.py  discover.py  momentum_parity.py  momentum_pools.json  momentum_rpc.py  momentum_study.py  mv_scan.py  paper_trade.py  parity.py  pools_config.json  run_24h.sh  run_report.py  run_report_2026-06-24.md  run_start_epoch.txt  turbos_discovery.py  turbos_parity.py  turbos_parity_results.json  turbos_pools.json  turbos_rpc.py
validation/coins/: Move.toml  Published.toml
validation/coins/sources/: coin_a.move  coin_b.move  coin_c.move
